# smeftewpt

./: .gitignore  README.md  pyproject.toml
Mathematica/: 3DEFT.nb  3DEFTChala.nb  4DTreePotential.nb  NormalizeKineticTerm3D.nb  rplcSumOver.m
Mathematica/Chala/: HotNews.m  matching_bos_good.txt  matching_fer_good.txt
example/: runPoint.py  testSMrunning.py  testTcrit.py
example/threedim/: runPoint.py  testTcrit.py
src/smeftewpt/: input.py  util.py
src/smeftewpt/potentials/: fourdim.py  threedim.py
src/smeftewpt/running/: smrge.py
src/smeftewpt/vacstruct/: phases.py
